# team-flow-task-management-service

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt  start.sh
src/: manage.py
src/accounts/: consumer.py  managers.py  models.py  serializers.py  utils.py
src/accounts/management/commands/: consume.py
src/accounts/migrations/: 0001_initial.py  0002_alter_user_uuid.py  0003_delete_user.py
src/accounts/serializers/: user_serializer.py
src/accounts/tests/: test_models.py  test_utils.py
src/core/: models.py  views.py
src/project/: settings.py  urls.py
src/project/settings/: __init__.py  auth_service.py  base.py  rest_framework.py
src/projects/: admin.py  apps.py  managers.py  models.py  serializers.py  tests.py  urls.py  views.py
src/projects/managers/: member_manager.py  project_manager.py
src/projects/migrations/: 0001_initial.py  0002_project_owner.py  0002_rename_roles_role.py  0003_remove_project_created_by_updated_by_owner.py  0003_task_task_name.py  0004_project_created_by_project_owner_project_updated_by.py  0004_rename_roles_role_role.py  0005_members.py  0005_remove_role_id_project_deleted_project_updated_at_and_more.py  0006_rename_members_member.py  0007_alter_project_description.py
src/projects/serializers/: serializers.py
src/projects/tests/: test_models.py  test_serializers.py  test_urls.py  test_utils.py  test_views.py
src/projects/views/: project_views.py
